--- a/myface-onface-html/src/views/layout/_layout-base.html
+++ b/myface-onface-html/src/views/layout/_layout-base.html
@@ -13,7 +13,7 @@
 	<!-- Humans -->
 	<link rel="author" href="https://www.pinterest.com/blacksnow79/my-projects/">
 	<!-- Styles -->
-	{% include "_style.html" %}
+	{% include "../block/_style.html" %}
 	<!-- Favicon -->
 	<link rel="icon", href="assets/images/favicon.ico", type="image/x-icon", sizes="16x16" >
 	<!--[if lt IE 9]>
@@ -37,6 +37,6 @@
 	<!--modal-->
 	{% block modal%}{% endblock %}
 	<!--script-->
-	{% include "_script.html" %}
+	{% include "../block/_script.html" %}
 </body>
 </html>
