--- a/myface-onface-html/src/views/layout/_layout.html
+++ b/myface-onface-html/src/views/layout/_layout.html
@@ -6,6 +6,7 @@
 {% block page-container %}{% endblock %}
 <!--footer-->
 {% block footer%}
+	{% include "../block/_footer.html" %}
 {% endblock %}
 <!--modal-->
 {% block modal%}
