--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -8,7 +8,6 @@
   .border-radius(@btn-border-radius);
   .box-shadow(@btn-boxshadow);
   border: 1px solid transparent;
-
   &.uppercase {
     text-transform: uppercase
   }
@@ -101,6 +100,7 @@
   }
 }
 .btn-cart {
+  word-spacing: 2px;
   >* {
     margin: 0 2px;
   }
