--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -23,10 +23,10 @@ body {
 header {
 }
 main {
-  margin-bottom: 80px;
+  width: 100%;
+  display: block;
 }
-footer {
-  
+footer {  
 }
 /* H1 - H6 font */
 h1,
