--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -12,6 +12,7 @@
 @import "mixins.less";
 //COMPONENTS
 //-----------
+@import "margin-padding.less";
 @import "buttons.less";
 @import "forms.less";
 @import "table.less";
