--- a/myface-onface-html/src/views/index.html
+++ b/myface-onface-html/src/views/index.html
@@ -1,6 +1,6 @@
 {% extends "layout/_layout.html" %}
 {% block page-container %}
-<main class="container product-onface">
+<main>
 	<!--banner-->
 	<div class="banner">
 		<img src="assets/images/upload/banner/banner.jpg" alt="myface">
