--- a/myface-onface-html/src/views/layout/_layout.html
+++ b/myface-onface-html/src/views/layout/_layout.html
@@ -1,4 +1,5 @@
 {% extends "_layout-base.html" %}
+{% block page-containerclass%}container product-onface{% endblock %}
 <!--header-->
 {% block header%}
 {% endblock %}
