--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -21,7 +21,8 @@ body {
   overflow-y: auto;
 }
 main {
-  margin-bottom: 80px;
+  width: 100%;
+  display: block;
 }
 /* H1 - H6 font */
 h1,
@@ -61,6 +62,9 @@ sup {
   top: -0.4em;
   text-decoration: underline;
   font-size: 65%;
+}
+.page-margin-bottom {
+  margin-bottom: 80px;
 }
 /*
  * Component: Button
@@ -154,6 +158,9 @@ sup {
 }
 .btn-icon > * {
   margin: 0 2px;
+}
+.btn-cart {
+  word-spacing: 2px;
 }
 .btn-cart > * {
   margin: 0 2px;
@@ -259,7 +266,7 @@ sup {
   padding: 0;
 }
 .products-block > .item {
-  border-radius: 4px;
+  border-radius: 2px;
   border: 1px solid #dfdfdf;
   padding: 0;
   margin: 0 0 15px;
@@ -282,10 +289,10 @@ sup {
   float: left;
   width: 164px;
   height: 164px;
-  border-top-left-radius: 4px;
+  border-top-left-radius: 2px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-  border-bottom-left-radius: 4px;
+  border-bottom-left-radius: 2px;
   overflow: hidden;
 }
 .products-block .product-img img {
@@ -293,8 +300,8 @@ sup {
   height: 100%;
 }
 .products-block .product-info {
-  margin-left: 194px;
-  padding: 20px 15px;
+  margin-left: 179px;
+  padding: 15px;
   position: relative;
 }
 .products-block .product-header {
@@ -334,8 +341,8 @@ sup {
 }
 .sale-tag {
   position: relative;
-  padding: 6px 15px;
-  margin: 0 0 0 10px;
+  padding: 5px 10px 5px 15px;
+  margin: 0;
   font-size: 13px;
   text-transform: capitalize;
   color: #fff;
@@ -352,7 +359,7 @@ sup {
   position: absolute;
   top: 0;
   right: -10px;
-  border-top: 14px solid transparent;
+  border-top: 12px solid transparent;
   border-left: 10px solid #ff5722;
   border-bottom: 13px solid transparent;
 }
@@ -432,15 +439,16 @@ footer a {
 }
 .banner {
   width: 100%;
-  height: 200px;
+  height: 174px;
   overflow: hidden;
-  margin: 0 0 20px;
+  margin: 0 0 15px;
 }
 .banner img {
   width: 100%;
 }
 .product-onface {
-  width: 800px;
+  width: 780px;
+  border: 1px solid #e9eaed;
 }
 .nav-filter {
   width: 100%;
@@ -453,6 +461,7 @@ footer a {
 }
 .product-container {
   width: 100%;
+  margin-bottom: 80px;
   float: left;
 }
 select.bs-select-hidden,
