--- a/myface-onface-html/src/assets/less/style/page/product-onface.less
+++ b/myface-onface-html/src/assets/less/style/page/product-onface.less
@@ -1,14 +1,15 @@
 .banner {
 	width: 100%;
-	height: 200px;
+	height: 174px;
 	overflow: hidden;
-	margin: 0 0 20px;
+	margin: 0 0 15px;
 	img {
 		width: 100%;
 	}
 }
 .product-onface {
-	width: 800px;
+	width: 780px;
+	border: 1px solid #e9eaed;
 }
 .nav-filter {
 	width: 100%;
@@ -21,5 +22,6 @@
 }
 .product-container {
 	width: 100%;
+	.page-margin-bottom;
 	float: left;
 }
