--- a/myface-onface-html/src/assets/less/style/products.less
+++ b/myface-onface-html/src/assets/less/style/products.less
@@ -41,7 +41,7 @@
   }
   .product-title {
     display: block;
-    margin: 0 0 10px;
+    margin: 0 0 15px;
     font-size: 14px;
     color: @text-color-1;
     &:hover,
@@ -56,10 +56,13 @@
   }
   .btn-buy {
     width: 110px;
+    padding: 6px 20px;
     float: right;
   }
 }
 .price {
+  width: 100%;
+  line-height: 1;
   position: relative;
   &.current{
     font-size: 16px;
