--- a/myface-onface-html/src/views/index.html
+++ b/myface-onface-html/src/views/index.html
@@ -62,7 +62,7 @@
 	    <li><a href="#">3</a></li>
 	    <li>
 	      <a href="#" aria-label="Next">
-	        <span aria-hidden="true">Trang sau</span>
+	        <span aria-hidden="true">Trang cuối</span>
 	      </a>
 	    </li>
 	  </ul>
