--- a/myface-onface-html/src/assets/less/style/products.less
+++ b/myface-onface-html/src/assets/less/style/products.less
@@ -48,12 +48,20 @@
   .btn-buy {
     width: 110px;
     padding: 6px 20px;
+    .box-shadow(@btn-boxshadow-2);
     float: right;
+    &:hover,
+    &:active,
+    &:focus,
+    &:active:hover,
+    &:active:focus {
+      .box-shadow(none);
+    }
   }
 }
 .product-title {
   display: block;
-  margin: 0 0 15px;
+  margin: 0 0 12px;
   font-size: 14px;
   color: @text-color-1;
   &:hover,
@@ -64,7 +72,7 @@
 }
 .price-block {
   width: 100%;
-  height: 18px;
+  height: 14px;
 }
 .price {
   width: 100%;
